--- a/RegistryBackend/Dockerfile
+++ b/RegistryBackend/Dockerfile
@@ -1,4 +1,8 @@
 FROM openjdk:8
-ADD build/libs/*.jar dockerapp.jar
+COPY . . 
+RUN BootJar
+
+FROM nginx
+COPY --from=builder build/libs/*.jar dockerapp.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "dockerapp.jar"]
