--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services:
   - docker 
 
 before_install: 
+  - git submodule update --init --recursive
   - docker build -t idanzigm/frontend-test -f ./frontend/Dockerfile.dev ./frontend
   - docker build -t idanzigm/spring-test -f ./RegistryBackend/Dockerfile.dev ./RegistryBackend
 
