Changed dockerfile in RegBack to RUN gradle clean and fatJar

--- a/RegistryBackend/Dockerfile.dev
+++ b/RegistryBackend/Dockerfile.dev
@@ -1,6 +1,7 @@
 FROM openjdk:8
 EXPOSE 8080
 COPY . . 
-RUN bootJar
+RUN gradle clean 
+RUN gradle fatJar
 
 ENTRYPOINT ["java", "-jar", "dockerapp.jar"]
