--- a/RegistryBackend/Dockerfile
+++ b/RegistryBackend/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8
 COPY . . 
-RUN bootJar
+RUN gradle clean 
+RUN gradle fatJar
 
 FROM nginx
 COPY --from=builder build/libs/*.jar dockerapp.jar
