Installed gradle on build image

--- a/RegistryBackend/Dockerfile.dev
+++ b/RegistryBackend/Dockerfile.dev
@@ -1,6 +1,11 @@
 FROM openjdk:8
 EXPOSE 8080
+
+COPY ./build.gradle ./
+RUN sdk install gradle 7.5.1
+
 COPY . . 
+
 RUN gradle clean 
 RUN gradle fatJar
 
