--- a/RegistryBackend/Dockerfile.dev
+++ b/RegistryBackend/Dockerfile.dev
@@ -1,8 +1,5 @@
-FROM openjdk:8
+FROM eclipse-temurin:8-jdk-jammy
 EXPOSE 8080
-
-COPY ./build.gradle ./
-RUN sdk install gradle 7.5.1
 
 COPY . . 
 
