--- a/RegistryBackend/Dockerfile.dev
+++ b/RegistryBackend/Dockerfile.dev
@@ -1,9 +1,37 @@
 FROM ubuntu:latest
 EXPOSE 8080
 
-RUN sudo apt-get install openjdk-8-jdk
-RUN curl -s "https://get.sdkman.io" | bash
-RUN sdk install gradle 7.5.1
+# Install "software-properties-common" (for the "add-apt-repository")
+RUN apt-get update && apt-get install -y \
+    software-properties-common
+# Add the "JAVA" ppa
+RUN add-apt-repository -y \
+    ppa:webupd8team/java
+
+# Install OpenJDK-8
+RUN apt-get update && \
+    apt-get install -y openjdk-8-jdk && \
+    apt-get install -y ant && \
+    apt-get clean;
+
+# Fix certificate issues
+RUN apt-get update && \
+    apt-get install ca-certificates-java && \
+    apt-get clean && \
+    update-ca-certificates -f \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/cache/oracle-jdk8-installer
+
+# Setup JAVA_HOME -- useful for docker commandline
+ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64/
+RUN export JAVA_HOME
+
+# Install Gradle 
+RUN RUN curl -L https://services.gradle.org/distributions/gradle-2.4-bin.zip -o gradle-2.4-bin.zip
+RUN apt-get install -y unzip
+RUN unzip gradle-2.4-bin.zip
+ENV GRADLE_HOME=/app/gradle-2.4 
+ENV PATH=$PATH:$GRADLE_HOME/bin
 
 COPY . . 
 
