--- a/RegistryBackend/build.gradle
+++ b/RegistryBackend/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'au.com.dius.pact.provider:junit:4.1.39'
 	implementation 'mockit:mockit:0.999.3'
